log/build_2024-06-04_13-46-42/simulink_subscriber/stderr.log
  File "/home/aakashraawat/colcon_ws/install/simulink_subscriber/lib/python3.8/site-packages/simulink_subscriber/steering_angle_simulink.py", line 4
    from from unity_robotics_msgs.msg import SteeringAngle  # to unity 3d
         ^
SyntaxError: invalid syntax

